@@ -518,6 +518,19 @@ typedef LPDIENUMDEVICESCALLBACKW LPDIENUMDEVICESCALLBACK;
 typedef LPDIENUMDEVICESCALLBACKA LPDIENUMDEVICESCALLBACK;
 #endif
 
+#define DIEDBS_MAPPEDPRI1		0x00000001
+#define DIEDBS_MAPPEDPRI2		0x00000002
+#define DIEDBS_RECENTDEVICE		0x00000010
+#define DIEDBS_NEWDEVICE		0x00000020
+
+#define DIEDBSFL_ATTACHEDONLY		0x00000000
+#define DIEDBSFL_THISUSER		0x00000010
+#define DIEDBSFL_FORCEFEEDBACK		DIEDFL_FORCEFEEDBACK
+#define DIEDBSFL_AVAILABLEDEVICES	0x00001000
+#define DIEDBSFL_MULTIMICEKEYBOARDS	0x00002000
+#define DIEDBSFL_NONGAMINGDEVICES	0x00004000
+#define DIEDBSFL_VALID			0x00007110
+
 #if DIRECTINPUT_VERSION >= 0x0800
 typedef BOOL (CALLBACK *LPDIENUMDEVICESBYSEMANTICSCBA)(LPCDIDEVICEINSTANCEA,LPDIRECTINPUTDEVICE8A,DWORD,DWORD,LPVOID);
 typedef BOOL (CALLBACK *LPDIENUMDEVICESBYSEMANTICSCBW)(LPCDIDEVICEINSTANCEW,LPDIRECTINPUTDEVICE8W,DWORD,DWORD,LPVOID);
@@ -823,6 +836,12 @@ typedef struct DIPROPGUIDANDPATH {
 } DIPROPGUIDANDPATH, *LPDIPROPGUIDANDPATH;
 typedef const DIPROPGUIDANDPATH *LPCDIPROPGUIDANDPATH;
 
+typedef struct DIPROPSTRING {
+        DIPROPHEADER diph;
+        WCHAR        wsz[MAX_PATH];
+} DIPROPSTRING, *LPDIPROPSTRING;
+typedef const DIPROPSTRING *LPCDIPROPSTRING;
+
 /* special property GUIDs */
 #ifdef __cplusplus
 #define MAKEDIPROP(prop)	(*(const GUID *)(prop))
@@ -853,6 +872,7 @@ typedef const DIPROPGUIDANDPATH *LPCDIPROPGUIDANDPATH;
 
 #define DIPROP_CALIBRATION	MAKEDIPROP(11)
 #define DIPROP_GUIDANDPATH	MAKEDIPROP(12)
+#define DIPROP_KEYNAME          MAKEDIPROP(20)
 
 typedef struct DIDEVCAPS_DX3 {
     DWORD	dwSize;
@@ -901,6 +921,7 @@ typedef struct DIDEVCAPS {
 #define DISCL_NONEXCLUSIVE	0x00000002
 #define DISCL_FOREGROUND	0x00000004
 #define DISCL_BACKGROUND	0x00000008
+#define DISCL_NOWINKEY          0x00000010
 
 /* Device FF flags */
 #define DISFFC_RESET            0x00000001
